# basic_calculator

./: README.md  db.sqlite3  pyproject.toml
calculations/: calc.py  forms.py  urls.py  views.py
calculations/templates/: index.html
calculator/: settings.py  urls.py
